Update and rename Personal PC options.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -22,15 +22,15 @@ p {font-family: 'Berlin Sans FB', cursive; font-size 20px;}
 
 
 
- <p><a href="C:/Temp/Personal PC/PC.html">Mikä On PC</a>
+ <p><a href="PC.html">Mikä On PC</a>
 
-<p><a href="C:/Temp/Personal PC/Keskus.html">Keskusyksikkö</a>
+<p><a href="Keskus.html">Keskusyksikkö</a>
 
-<p><a href="C:/Temp/Personal PC/Keyboard.html">Näppämistö</a>
+<p><a href="Keyboard.html">Näppämistö</a>
 
-<p><a href="C:/Temp/Personal PC/Monitor.html">Monitori</a><br>
+<p><a href="Monitor.html">Monitori</a><br>
 
-<p><a href="C:/Temp/Personal PC/Mouse.html">Hiiri</a><br>
+<p><a href="Mouse.html">Hiiri</a><br>
 
 
 
